fix: Fix header overlapping map on restaurant detail page

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,9 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.detail-content {
+  margin-top: 131px;
+}
 .inside header {
   position: fixed;
   top: 0;
